force-app/main/default/staticresources/python/Disappear/src/objects/PubNote__c.object
<CustomObject>
    <fields>
        <fullName>LegacyCreatedBy__c</fullName>
        <label>Legacy Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCreatedDate__c</fullName>
        <label>Legacy Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedBy__c</fullName>
        <label>Legacy Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyLastModifiedDate__c</fullName>
        <label>Legacy Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Publication Note</label>
    <nameField>
        <label>PubNotes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>